add/del manual src

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@
 
   table{
       border:2px solid #53637D;
+      width:600px;
   }
 
   tr{
@@ -66,8 +67,5 @@
 
   img{
       width:100%;
-  }
-
-  #underlist{
-      width:600px;
+      max-height:200px;
   }
