--- a/style.css
+++ b/style.css
@@ -69,3 +69,9 @@
       width:100%;
       max-height:200px;
   }
+
+  button.bookmark{
+      height:30px;
+      float:left;
+      margin:2px;
+  }
