--- a/style.css
+++ b/style.css
@@ -1,90 +1,10 @@
-/**
- * Copyright (c) 2012 The Chromium Authors. All rights reserved.
- * Use of this source code is governed by a BSD-style license that can be
- * found in the LICENSE file.
- */
 
- body {
-    margin: 5px 10px 10px;
-  }
-  
-  h1 {
-    color: #53637D;
-    font: 26px/1.2 Helvetica, sans-serif;
-    font-size: 200%;
-    margin: 0;
-    padding-bottom: 4px;
-    text-shadow: white 0 1px 2px;
-  }
-  
-  label {
-    color: #222;
-    font: 18px/1.4 Helvetica, sans-serif;
-    margin: 0.5em 0;
-    display: inline-block;
-  }
-  
-  form {
-    transition: transform 0.25s ease;
-    width: 563px;
-  }
-  
-  button {
-    display: block;
-    border-radius: 2px;
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-    -webkit-user-select: none;
-    background: -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
-    border: 1px solid #AAA;
-    color: #444;
-    margin-bottom: 0;
-    min-width: 4em;
-    padding: 3px 12px;
-    margin-top: 0;
-    font-size: 1.1em;
-  }
-
-  table{
-      border:2px solid #53637D;
-      width:630px;
-  }
-
-  tr{
-      border-bottom:1px solid #AAA;
-  }
-  
-  table .kind{
-      width:50%;
-  }
-
-  table .add{
-      width:20%;
-  }
-
-  table th{
-      font-size:1rem;
-      background-color:#999;
-  }
-
-  table td{
-      word-break:break-all;
-  }
-
-  img{
+  img.registeredSrc{
       width:100%;
       max-height:200px;
   }
 
-  button.shortcut{
-      height:30px;
-      float:left;
-      margin:2px;
-  }
-
-  #underlist .trName{
-      width:100px;
-  }
-
-  #underlist .trView{
-      width:400px;
+  .ui.button.shortcut{
+      padding:0.4em 0.5em 0.4em;
+      margin:3px;
   }
