--- a/style.css
+++ b/style.css
@@ -9,10 +9,18 @@
       margin:3px;
   }
 
+  #userShortcut .ui.func{
+      padding:12px 10px;
+  }
+
   .ui.table tr td{
       word-break: break-all;
   }
 
   .ui.table .trView{
       margin-top:30px;
+  }
+
+  .ui.card{
+      width:400px;
   }
